--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -2,16 +2,16 @@ version: '3.8'
 
 services:
   cpp-toolchain-dev:
-    environment:
-      - USER_NAME=vscodeuser
+    # environment:
+    #   - USER_NAME=vscodeuser
     # user: ${USER_NAME}
     build:
       context: . # TODO: image with a specific tag
       dockerfile: ./Dockerfile
       args:
         BASE_IMAGE: 'ubuntu:jammy' # llvm.sh is failing for now on noble (24.04)
-        USER_NAME: ${USER_NAME}
-        USER_PASSWORD: 'password'
+        REMOTE_USER_NAME: ${REMOTE_USER_NAME}
+        REMOTE_USER_PASSWORD: ${REMOTE_USER_PASSWORD}
         GCC_VERSIONS: '>=13'
         LLVM_VERSIONS: '>=17'
         OPT_IN_INTEGRATE_BAZEL: no
@@ -21,12 +21,12 @@ services:
       - "2222:22"
     volumes:
       - ..:/workspace
-      - ./ssh_config:/home/${USER_NAME}/.ssh/config
+    # - ./ssh_config:/home/${USER_NAME}/.ssh/config
     # git
     #   WIP: commit as USERNAME in container
     #     ssh-keygen -f '/home/vscodeuser/.ssh/known_hosts' -R 'github.com'
-    command:
-      sh -c "git config --global --add safe.directory /workspace"
+    # command:
+    #   sh -c "git config --global --add safe.directory /workspace"
     # network_mode: host
     # Required for ptrace-based debuggers like C++, Go, and Rust
     cap_add:
