[Docker] cpp-toolchain-dev - ssh-agent on windows

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,6 +9,7 @@
     "features": {
         "git": "os-provided",
         "sshd": "latest"
+        // see https://github.com/devcontainers/features/tree/main/src
     },
     "customizations": {
         "vscode": {
