--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -116,13 +116,16 @@ RUN script_path=${TOOLCHAIN_TMP_DIR}/scripts/llvm.sh;                           
     && ${script_path} --silent=yes --alias=yes --versions="$LLVM_VERSIONS"
 
 # Build: Build2-0.16.0 (depends on a compiler)
-#   WIP: see https://github.com/r-sitko/cxx-modules-build2/blob/master/Dockerfile (fix yes-es)
 ARG OPT_IN_INTEGRATE_BUILD2='no'
 RUN if [[ "${OPT_IN_INTEGRATE_BUILD2}" = "y" ]]; then                               \
         mkdir -p /tmp/build2-build && cd /tmp/build2-build                          \
         && curl -sSfO https://download.build2.org/0.16.0/build2-install-0.16.0.sh   \
         && echo '4d2babfaff6d0412e0ab61a3d3c68a87de54c0779254d62f4569b44a56c6ea08 *build2-install-0.16.0.sh' | shasum -a 256 -c \
-        && yes '' | sh build2-install-0.16.0.sh --yes                               \
+        && sh build2-install-0.16.0.sh                                              \
+            --yes                                                                   \
+            --cxx clang++                                                           \
+            --sudo false                                                            \
+            --jobs $(nproc)                                                         \
         ;                                                                           \
     fi
 
