--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,6 +9,7 @@
     "features": {
         // see https://github.com/devcontainers/features/tree/main/src
         "ghcr.io/devcontainers/features/git:1": {}, // "git": "os-provided",
+        "ghcr.io/devcontainers/features/github-cli:1": {}, // https://github.com/cli/cli?tab=readme-ov-file#installation
         "ghcr.io/devcontainers/features/sshd:1": {} // "sshd": "latest"
     },
     "customizations": {
