--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,9 +8,9 @@
     "overrideCommand": true,
     "features": {
         // see https://github.com/devcontainers/features/tree/main/src
-        "ghcr.io/devcontainers/features/git:1": {}, // "git": "os-provided",
+        "ghcr.io/devcontainers/features/git:1": {},
         "ghcr.io/devcontainers/features/github-cli:1": {}, // https://github.com/cli/cli?tab=readme-ov-file#installation
-        "ghcr.io/devcontainers/features/sshd:1": {} // "sshd": "latest"
+        "ghcr.io/devcontainers/features/sshd:1": {}
     },
     "customizations": {
         "vscode": {
@@ -41,7 +41,6 @@
         },
         "postCreateCommand": {
             "git-safe-dir-workspace": "git config --global --add safe.directory /workspace"
-            
         }
     }
 }
