[Docker] force dos2unix

--- a/.github/workflows/cmake-Ubuntu-clang.yml
+++ b/.github/workflows/cmake-Ubuntu-clang.yml
@@ -64,4 +64,4 @@ jobs:
     - name: Test - ${{matrix.CSL_COMPONENTS}} (${{matrix.BUILD_TYPE}}, ${{matrix.STL_IMPLEMENTATION}})
       working-directory: ${{github.workspace}}/out/build/${{matrix.BUILD_TYPE}}/${{matrix.CSL_COMPONENTS}}
       shell: bash
-      run: ctest -R csl_test_${{matrix.CSL_COMPONENTS}}
+      run: ctest -R csl_validate_${{matrix.CSL_COMPONENTS}}
