--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,7 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "-std=c++20",
+                "-DCSL_BUILD_ALL_TESTS:BOOL=ON",
                 "-O2",
                 "${file}",
                 "-o",
@@ -37,6 +38,7 @@
                 "-g",
                 "-stdlib=libstdc++",
                 "-std=c++20",
+                "DCSL_BUILD_ALL_TESTS:BOOL=ON",
                 "-O2",
                 "${file}",
                 "-o",
