--- a/tests/ag/CMakeLists.txt
+++ b/tests/ag/CMakeLists.txt
@@ -4,10 +4,7 @@ set(component_name ag)
 set(test_name test_${PROJECT_NAME}_${component_name}_compile_time)
 
 add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
-target_include_directories(${test_name}
-	PRIVATE
-		${CMAKE_CURRENT_SOURCE_DIR}/includes
-)
+target_include_directories(${test_name} PRIVATE ${CMAKE_SOURCE_DIR}/tests/details/)
 add_dependencies(${test_name} ${PROJECT_NAME}::${component_name})
 target_link_libraries(${test_name}
 	PRIVATE
@@ -15,7 +12,7 @@ target_link_libraries(${test_name}
 )
 
 add_test(
-	NAME 	${PROJECT_NAME}_test_${component_name}
+	NAME 	${PROJECT_NAME}_validate_${component_name}
 	COMMAND $<TARGET_FILE:${test_name}>
 )
 
@@ -23,10 +20,7 @@ add_test(
 set(test_name test_${PROJECT_NAME}_${component_name}_bitfield_support_compile_time)
 
 add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test_bitfield_support.cpp)
-target_include_directories(${test_name}
-	PRIVATE
-		${CMAKE_CURRENT_SOURCE_DIR}/includes
-)
+target_include_directories(${test_name} PRIVATE ${CMAKE_SOURCE_DIR}/tests/details/)
 add_dependencies(${test_name} ${PROJECT_NAME}::${component_name})
 target_link_libraries(${test_name}
 	PRIVATE
@@ -34,6 +28,6 @@ target_link_libraries(${test_name}
 )
 
 add_test(
-	NAME 	${PROJECT_NAME}_test_${component_name}_bitfield_support
+	NAME 	${PROJECT_NAME}_validate_${component_name}_bitfield_support
 	COMMAND $<TARGET_FILE:${test_name}>
 )
