--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   cpp-toolchain-dev:
     environment:
@@ -21,10 +19,16 @@ services:
       - "2222:22"
     volumes:
       - ..:/workspace
-      - build:/workspace/build/ # build: persistent, yet excluded from mounting
+      - build:/workspace/build/ # build: excluded from mounting -> persistent per container
     cap_add:
       - SYS_PTRACE
     security_opt:
       - seccomp:unconfined
+  # ssh-support:
+  #   environment:
+  #     - SSH_AUTH_SOCK=/ssh-agent
+  #   build:
+  #     dockerfile: ./ssh_support.dockerfile
+
 volumes:
-  build: # build: persistent, yet excluded from mounting
+  build: # excluded from mounting
