--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -13,10 +13,10 @@ services:
         LLVM_VERSIONS: '>=17'
         OPT_IN_INTEGRATE_BAZEL: no
         OPT_IN_INTEGRATE_BUILD2: no
-      ssh: # requires ssh-agent service running on host
-        - default
-    ports:
-      - "2222:22"
+    #   ssh: # requires ssh-agent service running on host
+    #     - default
+    # ports:
+    #   - "2222:22"
     volumes:
       - ..:/workspace
       - build:/workspace/build/ # build: excluded from mounting -> persistent per container
@@ -24,11 +24,16 @@ services:
       - SYS_PTRACE
     security_opt:
       - seccomp:unconfined
-  # ssh-support:
-  #   environment:
-  #     - SSH_AUTH_SOCK=/ssh-agent
-  #   build:
-  #     dockerfile: ./ssh_support.dockerfile
+  ssh-support:
+    # environment:
+    #   - SSH_AUTH_SOCK=/ssh-agent
+    build:
+      dockerfile: ./ssh_support.dockerfile
+      args:
+        USER_NAME: 'vscodeuser'
+        USER_PASSWORD: 'vscodeuser'
+    ports:
+      - "2201:22"
 
 volumes:
   build: # excluded from mounting
