[Docker] separated ssh support (WIP)

--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -18,18 +18,23 @@ services:
       - SYS_PTRACE
     security_opt:
       - seccomp:unconfined
+    networks:
+      - dev_network
+  ssh-support:
+    build:
+      dockerfile: ./ssh_support.dockerfile
+      args:
+        USER_NAME: 'vscodeuser'
+        USER_PASSWORD: 'vscodeuser'
     ports:
-      - "2201:22"
-  # ssh-support:
-  #   build:
-  #     dockerfile: ./ssh_support.dockerfile
-  #     args:
-  #       USER_NAME: 'vscodeuser'
-  #       USER_PASSWORD: 'vscodeuser'
-  #   ports:
-  #     - "2201:22"
-  #   networks:
-  #     - ssh_support_network
+      - "2222:22"
+    networks:
+      - dev_network
+    depends_on:
+      - cpp-toolchain-dev
 
 volumes:
   build: # excluded from mounting
+networks:
+  dev_network:
+    driver: bridge
