--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -18,6 +18,7 @@
         "ms-vscode-remote.vscode-remote-extensionpack",
         "ms-vscode.remote-server",
         "ms-vscode-remote.remote-ssh-edit",
-        "ms-vscode.remote-explorer"
+        "ms-vscode.remote-explorer",
+        "ms-azuretools.vscode-docker"
     ]
 }
