--- a/.github/workflows/cmake-Ubuntu-gcc.yml
+++ b/.github/workflows/cmake-Ubuntu-gcc.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   cmake-Ubuntu-gcc_build_test:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04 # ubuntu-latest
 
     strategy:
         matrix:
