--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,11 +25,15 @@
         "header-insertion=never"
     ],
     "clang-tidy.buildPath": "./build/", // "${workspaceFolder}/build"
+    // TODO(Guillaume): requires integration of https://github.com/microsoft/vscode-cmake-tools/issues/1090
+    // "cmake.configureArgs": [
+    //     "--warn-unused-cli"
+    // ],
     "cmake.sourceDirectory": "${workspaceFolder}",
     "cmake.configureOnOpen": true,
     "cmake.generator": "Ninja",
     "cmake.configureSettings": {
-        // "CMAKE_GENERATOR": "Ninja",
+        "CMAKE_GENERATOR": "Ninja",
         "CMAKE_EXPORT_COMPILE_COMMANDS": true,
         "CSL_BUILD_ALL": true,
         "CSL_ENABLE_ALL_TESTS": true,
