--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,8 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "-std=c++20",
-                "-DCSL_BUILD_ALL_TESTS:BOOL=ON",
+                "-DCSL_ENABLE_ALL_TESTS:BOOL=ON",
+                "-DCSL_ENABLE_ALL_EXAMPLES:BOOL=ON",
                 "-O2",
                 "${file}",
                 "-o",
@@ -38,7 +39,8 @@
                 "-g",
                 "-stdlib=libstdc++",
                 "-std=c++20",
-                "DCSL_BUILD_ALL_TESTS:BOOL=ON",
+                "-DCSL_ENABLE_ALL_TESTS:BOOL=ON",
+                "-DCSL_ENABLE_ALL_EXAMPLES:BOOL=ON",
                 "-O2",
                 "${file}",
                 "-o",
