--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -20,5 +20,6 @@
         "ms-vscode-remote.remote-ssh-edit",
         "ms-vscode.remote-explorer",
         "ms-azuretools.vscode-docker"
-    ]
+    ],
+    "unwantedRecommendations": []
 }
